--- a/controllers/cluster_scripts/cloud_init.tmpl
+++ b/controllers/cluster_scripts/cloud_init.tmpl
@@ -51,16 +51,16 @@ write_files:{{ if .ControlPlane }}
     trap 'catch $? $LINENO' ERR EXIT
     set -ex
 
-    echo "$(date) Post Customization script execution in progress" &>> /var/log/capvcd/customization/status.log
-{{ if .ControlPlane }}
+    echo "$(date) Post Customization script execution in progress" &>> /var/log/capvcd/customization/status.log{{ if .ControlPlane }}
+
     VCLOUD_BASIC_AUTH_PATH=/root/vcloud-basic-auth.yaml
-    VLOUD_CONFIGMAP_PATH=/root/vcloud-configmap.yaml
+    VCLOUD_CONFIGMAP_PATH=/root/vcloud-configmap.yaml
     VCLOUD_CCM_PATH=/root/cloud-director-ccm.yaml
     VCLOUD_CSI_CONFIGMAP_PATH=/root/vcloud-csi-configmap.yaml
     CSI_DRIVER_PATH=/root/csi-driver.yaml
     CSI_CONTROLLER_PATH=/root/csi-controller.yaml
-    CSI_NODE_PATH=/root/csi-node.yaml
-{{ end }}
+    CSI_NODE_PATH=/root/csi-node.yaml{{ end }}
+
     vmtoolsd --cmd "info-set guestinfo.postcustomization.networkconfiguration.status in_progress"
     echo 'net.ipv6.conf.all.disable_ipv6 = 1' >> /etc/sysctl.conf
     echo 'net.ipv6.conf.default.disable_ipv6 = 1' >> /etc/sysctl.conf
@@ -69,7 +69,27 @@ write_files:{{ if .ControlPlane }}
     # also remove ipv6 localhost entry from /etc/hosts
     sed -i 's/::1/127.0.0.1/g' /etc/hosts || true
     vmtoolsd --cmd "info-set guestinfo.postcustomization.networkconfiguration.status successful"
-{{ if not .ControlPlane }}
+
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.proxy.setting.status in_progress"
+    export HTTP_PROXY="{{.HTTPProxy}}"
+    export HTTPS_PROXY="{{.HTTPSProxy}}"
+    export http_proxy="{{.HTTPProxy}}"
+    export https_proxy="{{.HTTPSProxy}}"
+    export NO_PROXY="{{.NoProxy}}"
+    export no_proxy="{{.NoProxy}}"
+    cat <<END > /etc/systemd/system/containerd.service.d/http-proxy.conf
+    [Service]
+    Environment="HTTP_PROXY={{.HTTPProxy}}"
+    Environment="HTTPS_PROXY={{.HTTPSProxy}}"
+    Environment="http_proxy={{.HTTPProxy}}"
+    Environment="https_proxy={{.HTTPSProxy}}"
+    Environment="no_proxy={{.NoProxy}}"
+    Environment="NO_PROXY={{.NoProxy}}"
+    END
+    systemctl daemon-reload
+    systemctl restart containerd
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.proxy.setting.status successful"{{ if .NvidiaGPU }}
+
     vmtoolsd --cmd "info-set guestinfo.postcustomization.nvidia.runtime.install.status in_progress"
     DISTRIBUTION=$(. /etc/os-release;echo $ID$VERSION_ID)
     curl -s -L https://nvidia.github.io/nvidia-docker/gpgkey | sudo apt-key add -
@@ -77,8 +97,8 @@ write_files:{{ if .ControlPlane }}
 
     apt-get update
     apt-get install -y nvidia-container-runtime
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.nvidia.runtime.install.status successful"
-{{ end }}
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.nvidia.runtime.install.status successful"{{ end }}
+
     vmtoolsd --cmd "info-set {{ if .ControlPlane }}guestinfo.postcustomization.kubeinit.status{{ else }}guestinfo.postcustomization.kubeadm.node.join.status{{ end }} in_progress"
     for IMAGE in "coredns" "etcd" "kube-proxy" "kube-apiserver" "kube-controller-manager" "kube-scheduler"
     do
@@ -87,20 +107,18 @@ write_files:{{ if .ControlPlane }}
       NEW_TAG_VERSION=$(echo $IMAGE_REF | sed 's/.*://' | sed 's/_/-/')
       ctr -n=k8s.io image tag $IMAGE_REF $REF_PATH:$NEW_TAG_VERSION
     done
-
-    {{ .JinjaRunCmd }}
-
+    {{ .BootstrapRunCmd }}
     if [[ ! -f /run/cluster-api/bootstrap-success.complete ]]
     then
       echo "file /run/cluster-api/bootstrap-success.complete not found" &>> /var/log/capvcd/customization/error.log
     exit 1
     fi
     export KUBECONFIG=/etc/kubernetes/{{ if .ControlPlane }}admin{{ else }}kubelet{{ end }}.conf
-    kubectl get po -A -owide
-{{ if .ControlPlane }}    vmtoolsd --cmd "info-set guestinfo.kubeconfig $(cat /etc/kubernetes/admin.conf | base64 | tr -d '\n')"{{ end }}
-    vmtoolsd --cmd "info-set {{ if .ControlPlane }}guestinfo.postcustomization.kubeinit.status{{ else }}guestinfo.postcustomization.kubeadm.node.join.status{{ end }} successful"
+    kubectl get po -A -owide{{ if .ControlPlane }}
+    vmtoolsd --cmd "info-set guestinfo.kubeconfig $(cat /etc/kubernetes/admin.conf | base64 | tr -d '\n')"{{ end }}
+    vmtoolsd --cmd "info-set {{ if .ControlPlane }}guestinfo.postcustomization.kubeinit.status{{ else }}guestinfo.postcustomization.kubeadm.node.join.status{{ end }} successful"{{ if .ControlPlane }}
 
-{{ if .ControlPlane }}    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cpi.install.status in_progress"
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cpi.install.status in_progress"
     kubectl apply -f $VCLOUD_BASIC_AUTH_PATH
     CPI_VERSION={{ .CpiVersion }}
     wget -O $VCLOUD_CONFIGMAP_PATH https://raw.githubusercontent.com/vmware/cloud-provider-for-cloud-director/$CPI_VERSION/manifests/vcloud-configmap.yaml
@@ -113,12 +131,12 @@ write_files:{{ if .ControlPlane }}
     sed -i 's/CLUSTER_ID/{{ .ClusterID }}/' $VCLOUD_CONFIGMAP_PATH
     kubectl apply -f $VCLOUD_CONFIGMAP_PATH
     wget -O $VCLOUD_CCM_PATH https://raw.githubusercontent.com/vmware/cloud-provider-for-cloud-director/$CPI_VERSION/manifests/cloud-director-ccm.yaml
-    kubectl apply -f $vcloud_ccm_path
+    kubectl apply -f $VCLOUD_CCM_PATH
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cpi.install.status successful"
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.csi.install.status in_progress"
     CSI_VERSION={{ .CsiVersion }}
-    wget -O $vcloud_csi_configmap_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$CSI_VERSION/manifests/vcloud-csi-config.yaml
+    wget -O $VCLOUD_CSI_CONFIGMAP_PATH https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$CSI_VERSION/manifests/vcloud-csi-config.yaml
     sed -i 's/VCD_HOST/"{{ .VcdHostFormatted }}"/' $VCLOUD_CSI_CONFIGMAP_PATH
     sed -i 's/ORG/"{{ .ClusterOrgName }}"/' $VCLOUD_CSI_CONFIGMAP_PATH
     sed -i 's/OVDC/"{{ .ClusterOVDCName }}"/' $VCLOUD_CSI_CONFIGMAP_PATH
@@ -130,7 +148,7 @@ write_files:{{ if .ControlPlane }}
     wget -O $CSI_NODE_PATH https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$CSI_VERSION/manifests/csi-node.yaml
     kubectl apply -f $CSI_DRIVER_PATH
     kubectl apply -f $CSI_CONTROLLER_PATH
-    kubectl apply -f $CSI_NODEPATH
+    kubectl apply -f $CSI_NODE_PATH
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.csi.install.status successful"
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.token.generate.status in_progress"
@@ -143,8 +161,9 @@ write_files:{{ if .ControlPlane }}
     if [[ "$STORAGE_CLASS_ENABLED" == "true" ]]; then
       kubectl apply -f /root/default-storage-class.yaml
     fi
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.default_storage_class.install.status successful"
-{{ else if .NvidiaGpu }}    vmtoolsd --cmd "info-set guestinfo.postcustomization.containerd.nvidia.configuration.status in_progress"
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.default_storage_class.install.status successful"{{ else if .NvidiaGPU }}
+
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.containerd.nvidia.configuration.status in_progress"
     cat > /etc/containerd/config.toml << EOF
     ## template: jinja
 
@@ -183,15 +202,15 @@ write_files:{{ if .ControlPlane }}
     EOF
 
     systemctl restart containerd
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.containerd.nvidia.configuration.status successful"{{ else }}{{ end }}
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.containerd.nvidia.configuration.status successful"{{ end }}
 
     echo "$(date) post customization script execution completed" &>> /var/log/capvcd/customization/status.log
     exit 0
 runcmd:{{ if .ControlPlane }}
 - '[ ! -f /root/vcloud-basic-auth.yaml ] && cloud-init clean && sudo reboot'{{ end }}
 - '[ ! -f /root/{{ if .ControlPlane }}control_plane{{ else }}node{{ end }}.sh ] && cloud-init clean && sudo reboot'
-# Only checking if /run/kubeadm/kubeadm{{ if not .ControlPlane }}-join-config{{ end }}.yaml as this is the main file{{ if .ControlPlane }} for kubeadm init.{{ else }} needed to execute kubeadm join.{{ end }}
-# Ignoring checks for .cert and .key files
+{{/* Only checking if /run/kubeadm/kubeadm(-join-config).yaml as this is the main file for kubeadm (init | join).*/}}
+{{/* Ignoring checks for .cert and .key files*/}}
 - '[ ! -f /run/kubeadm/kubeadm{{ if not .ControlPlane }}-join-config{{ end }}.yaml ] && cloud-init clean && sudo reboot'
 - bash /root/{{ if .ControlPlane }}control_plane{{ else }}node{{ end }}.sh
 timezone: UTC
