[VCDA-3860] correctly pull credentials from client auth config struct instead of cluster object (#172)
* correctly pull credentials from client auth config struct instead of cluster object

* do not make refreshToken take precedence in secret

Co-authored-by: Adnan Baruni <badnan@vmware.com>

--- a/controllers/cluster_scripts/cloud_init.tmpl
+++ b/controllers/cluster_scripts/cloud_init.tmpl
@@ -5,10 +5,10 @@ write_files: {{- if .ControlPlane }}
   content: |
     ---
     apiVersion: v1
-    data:
+    data: {{- if and .B64OrgUser .B64Password }}
       username: "{{ .B64OrgUser }}"
-      password: "{{ .B64Password }}"
-      refreshToken: "{{ .B64RefreshToken }}"
+      password: "{{ .B64Password }}" {{- end }}{{- if .B64RefreshToken }}
+      refreshToken: "{{ .B64RefreshToken }}" {{- end }}
     kind: Secret
     metadata:
       name: vcloud-basic-auth
