--- a/controllers/cluster_scripts/cloud_init.tmpl
+++ b/controllers/cluster_scripts/cloud_init.tmpl
@@ -16,22 +16,6 @@ write_files: {{- if .ControlPlane }}
     metadata:
       name: vcloud-basic-auth
       namespace: kube-system
-    ---
-- path: /root/default-storage-class.yaml
-  owner: root
-  content: |
-    ---
-    kind: StorageClass
-    apiVersion: storage.k8s.io/v1
-    metadata:
-      annotations:
-        storageclass.kubernetes.io/is-default-class: "true"
-      name: "{{ .K8sStorageClassName }}"
-    provisioner: named-disk.csi.cloud-director.vmware.com
-    reclaimPolicy: "{{ .ReclaimPolicy }}"
-    parameters:
-      storageProfile: "{{ .VcdStorageProfileName }}"
-      filesystem: "{{ .FileSystemFormat }}"
     --- {{- end }}
 - path: /root/ {{- if .ControlPlane -}} control_plane {{- else -}} node {{- end -}} .sh
   owner: root
@@ -121,50 +105,10 @@ write_files: {{- if .ControlPlane }}
     vmtoolsd --cmd "info-set guestinfo.kubeconfig $(cat /etc/kubernetes/admin.conf | base64 | tr -d '\n')" {{- end }}
     vmtoolsd --cmd "info-set {{ if .ControlPlane -}} guestinfo.postcustomization.kubeinit.status {{- else -}} guestinfo.postcustomization.kubeadm.node.join.status {{- end }} successful" {{- if .ControlPlane }}
 
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cpi.install.status in_progress"
-    kubectl apply -f $VCLOUD_BASIC_AUTH_PATH
-    CPI_VERSION={{ .CpiVersion }}
-    wget -O $VCLOUD_CONFIGMAP_PATH https://raw.githubusercontent.com/vmware/cloud-provider-for-cloud-director/$CPI_VERSION/manifests/vcloud-configmap.yaml
-    sed -i 's/VCD_HOST/"{{ .VcdHostFormatted }}"/' $VCLOUD_CONFIGMAP_PATH
-    sed -i 's/ORG/"{{ .ClusterOrgName }}"/' $VCLOUD_CONFIGMAP_PATH
-    sed -i 's/OVDC/"{{ .ClusterOVDCName }}"/' $VCLOUD_CONFIGMAP_PATH
-    sed -i 's/NETWORK/"{{ .NetworkName }}"/' $VCLOUD_CONFIGMAP_PATH
-    sed -i 's/VIP_SUBNET_CIDR/"{{ .VipSubnetCidr }}"/' $VCLOUD_CONFIGMAP_PATH
-    sed -i 's/VAPP/{{ .VAppName }}/' $VCLOUD_CONFIGMAP_PATH
-    sed -i 's/CLUSTER_ID/{{ .ClusterID }}/' $VCLOUD_CONFIGMAP_PATH
-    kubectl apply -f $VCLOUD_CONFIGMAP_PATH
-    wget -O $VCLOUD_CCM_PATH https://raw.githubusercontent.com/vmware/cloud-provider-for-cloud-director/$CPI_VERSION/manifests/cloud-director-ccm.yaml
-    kubectl apply -f $VCLOUD_CCM_PATH
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cpi.install.status successful"
-
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.csi.install.status in_progress"
-    CSI_VERSION={{ .CsiVersion }}
-    wget -O $VCLOUD_CSI_CONFIGMAP_PATH https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$CSI_VERSION/manifests/vcloud-csi-config.yaml
-    sed -i 's/VCD_HOST/"{{ .VcdHostFormatted }}"/' $VCLOUD_CSI_CONFIGMAP_PATH
-    sed -i 's/ORG/"{{ .ClusterOrgName }}"/' $VCLOUD_CSI_CONFIGMAP_PATH
-    sed -i 's/OVDC/"{{ .ClusterOVDCName }}"/' $VCLOUD_CSI_CONFIGMAP_PATH
-    sed -i 's/VAPP/{{ .VAppName }}/' $VCLOUD_CSI_CONFIGMAP_PATH
-    sed -i 's/CLUSTER_ID/"{{ .ClusterID }}"/' $VCLOUD_CSI_CONFIGMAP_PATH
-    kubectl apply -f $VCLOUD_CSI_CONFIGMAP_PATH
-    wget -O $CSI_DRIVER_PATH https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$CSI_VERSION/manifests/csi-driver.yaml
-    wget -O $CSI_CONTROLLER_PATH https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$CSI_VERSION/manifests/csi-controller.yaml
-    wget -O $CSI_NODE_PATH https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$CSI_VERSION/manifests/csi-node.yaml
-    kubectl apply -f $CSI_DRIVER_PATH
-    kubectl apply -f $CSI_CONTROLLER_PATH
-    kubectl apply -f $CSI_NODE_PATH
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.csi.install.status successful"
-
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.token.generate.status in_progress"
     KUBEADM_JOIN_INFO=$(kubeadm token create --print-join-command 2> /dev/null)
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.token.info $KUBEADM_JOIN_INFO"
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.token.generate.status successful"
-
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.default_storage_class.install.status in_progress"
-    STORAGE_CLASS_ENABLED={{ .EnableDefaultStorageClass }}
-    if [[ "$STORAGE_CLASS_ENABLED" == "true" ]]; then
-      kubectl apply -f /root/default-storage-class.yaml
-    fi
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.default_storage_class.install.status successful" {{- end }} {{- if .NvidiaGPU }}
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.token.generate.status successful" {{- if .NvidiaGPU }}
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.containerd.nvidia.configuration.status in_progress"
     cat > /etc/containerd/config.toml << EOF
