--- a/controllers/cluster_scripts/cloud_init.tmpl
+++ b/controllers/cluster_scripts/cloud_init.tmpl
@@ -17,6 +17,33 @@ write_files: {{- if .ControlPlane }}
       name: vcloud-basic-auth
       namespace: kube-system
     --- {{- end }}
+- path: /opt/vmware/cloud-director/metering.sh
+  owner: root
+  content: |
+     #!/usr/bin/env bash
+     vmtoolsd --cmd "info-set guestinfo.metering.vcd_site_id $VCD_SITE_ID"
+     vmtoolsd --cmd "info-set guestinfo.metering.cluster_id $CLUSTER_ID"
+     vmtoolsd --cmd "info-set guestinfo.metering.tkg_version $TKG_VERSION"
+     vmtoolsd --cmd "info-set guestinfo.metering.machine_type $MACHINE_TYPE"
+     vmtoolsd --cmd "info-set guestinfo.metering.mgmt $MGMT"
+- path: /etc/vcloud/metering
+  owner: root
+  content: |
+    VCD_SITE_ID={{ .VcdHostFormatted }}
+    CLUSTER_ID={{ .ClusterID }}
+    TKG_VERSION={{ .TKGVersion }}
+    MACHINE_TYPE={{- if .ControlPlane -}} control_plane {{- else -}} worker {{- end }}
+    MGMT=true
+- path: /etc/systemd/system/metering.service
+  owner: root
+  content: |
+    [Service]
+    Type=simple
+    EnvironmentFile=/etc/vcloud/metering
+    ExecStart=/bin/bash /opt/vmware/cloud-director/metering.sh
+
+    [Install]
+    WantedBy=multi-user.target
 - path: /root/ {{- if .ControlPlane -}} control_plane {{- else -}} node {{- end -}} .sh
   owner: root
   content: |
@@ -56,6 +83,12 @@ write_files: {{- if .ControlPlane }}
     # also remove ipv6 localhost entry from /etc/hosts
     sed -i 's/::1/127.0.0.1/g' /etc/hosts || true
     vmtoolsd --cmd "info-set guestinfo.postcustomization.networkconfiguration.status successful"
+
+    vmtoolsd --cmd "info-set guestinfo.metering.status in_progress"
+    systemctl enable metering
+    systemctl daemon-reload
+    systemctl restart metering
+    vmtoolsd --cmd "info-set guestinfo.metering.status successful"
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.proxy.setting.status in_progress"
     export HTTP_PROXY="{{.HTTPProxy}}"
@@ -155,6 +188,8 @@ write_files: {{- if .ControlPlane }}
     exit 0
 runcmd:
 - 'cloud-init clean'
+- '[ ! -f /opt/vmware/cloud-director/metering.sh ] && sudo reboot'
+- '[ ! -f /etc/vcloud/metering ] && sudo reboot'
 {{ if .ControlPlane }}
 - '[ ! -f /root/vcloud-basic-auth.yaml ] && sudo reboot'
 - '[ ! -f /root/control_plane.sh ] && sudo reboot'
