--- a/controllers/cluster_scripts/cloud_init.tmpl
+++ b/controllers/cluster_scripts/cloud_init.tmpl
@@ -2,21 +2,7 @@
 users:
   - name: root
     lock_passwd: false
-write_files: {{- if .ControlPlane }}
-- path: /root/vcloud-basic-auth.yaml
-  owner: root
-  content: |
-    ---
-    apiVersion: v1
-    data: {{- if and .B64OrgUser .B64Password }}
-      username: "{{ .B64OrgUser }}"
-      password: "{{ .B64Password }}" {{- end }}{{- if .B64RefreshToken }}
-      refreshToken: "{{ .B64RefreshToken }}" {{- end }}
-    kind: Secret
-    metadata:
-      name: vcloud-basic-auth
-      namespace: kube-system
-    --- {{- end }}
+write_files:
 - path: /etc/cloud/cloud.cfg.d/cse.cfg
   owner: root
   content: |
@@ -140,12 +126,12 @@ write_files: {{- if .ControlPlane }}
     export KUBECONFIG=/etc/kubernetes/ {{- if .ControlPlane -}} admin {{- else -}} kubelet {{- end -}} .conf
     kubectl get po -A -owide {{- if .ControlPlane }}
     vmtoolsd --cmd "info-set guestinfo.kubeconfig $(cat /etc/kubernetes/admin.conf | base64 | tr -d '\n')" {{- end }}
-    vmtoolsd --cmd "info-set {{ if .ControlPlane -}} guestinfo.postcustomization.kubeinit.status {{- else -}} guestinfo.postcustomization.kubeadm.node.join.status {{- end }} successful"
+    vmtoolsd --cmd "info-set {{ if .ControlPlane -}} guestinfo.postcustomization.kubeinit.status {{- else -}} guestinfo.postcustomization.kubeadm.node.join.status {{- end }} successful" {{- if .ControlPlane }}
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.token.generate.status in_progress"
     KUBEADM_JOIN_INFO=$(kubeadm token create --print-join-command 2> /dev/null)
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.token.info $KUBEADM_JOIN_INFO"
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.token.generate.status successful" {{- if .NvidiaGPU }}
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.token.generate.status successful" {{- end }} {{- if .NvidiaGPU }}
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.containerd.nvidia.configuration.status in_progress"
     cat > /etc/containerd/config.toml << EOF
