--- a/controllers/cluster_scripts/cloud_init.tmpl
+++ b/controllers/cluster_scripts/cloud_init.tmpl
@@ -139,6 +139,8 @@ write_files:
 
     [plugins]
       [plugins."io.containerd.grpc.v1.cri"]
+        sandbox_image = "projects.registry.vmware.com/tkg/pause:3.4.1"
+
         [plugins."io.containerd.grpc.v1.cri".containerd]
           default_runtime_name = "nvidia"
 
@@ -157,10 +159,6 @@ write_files:
             [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
               endpoint = ["https://registry-1.docker.io"]
 
-        [plugins."io.containerd.grpc.v1.cri".registry.configs]
-          [plugins."io.containerd.grpc.v1.cri".registry.configs."registry-1.docker.io".auth]
-            username = "${DOCKER_USERNAME}"
-            password = "${DOCKER_PASSWORD}"
     EOF
 
     systemctl restart containerd
