Update future control plane worker nodes to be marked as control plane in metering
Signed-off-by: lzichong <lzichong@vmware.com>

--- a/controllers/cluster_scripts/cloud_init.tmpl
+++ b/controllers/cluster_scripts/cloud_init.tmpl
@@ -48,7 +48,7 @@ write_files:
     VCD_SITE_ID={{ .VcdHostFormatted }}
     CLUSTER_ID={{ .ClusterID }}
     TKG_VERSION={{ .TKGVersion }}
-    MACHINE_TYPE={{- if .ControlPlane -}} control_plane {{- else -}} worker {{- end }}
+    MACHINE_TYPE={{- if or .ControlPlane .ResizedControlPlane -}} control_plane {{- else -}} worker {{- end }}
     MGMT=true
 - path: /etc/systemd/system/metering.service
   owner: root
