changes to cloud init to enable ssh password based login for root user
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/controllers/cluster_scripts/cloud_init.tmpl
+++ b/controllers/cluster_scripts/cloud_init.tmpl
@@ -150,6 +150,8 @@ runcmd:
 - '[ ! -f /opt/vmware/cloud-director/metering.sh ] && sudo reboot'
 - '[ ! -f /etc/cloud/cloud.cfg.d/cse.cfg ] && sudo reboot'
 - '[ ! -f /etc/vcloud/metering ] && sudo reboot'
+- sed -i -e 's~#PermitRootLogin prohibit-password~PermitRootLogin yes~' /etc/ssh/sshd_config
+- 'service ssh restart'
 {{ if .ControlPlane }}
 - '[ ! -f /root/control_plane.sh ] && sudo reboot'
 - '[ ! -f /run/kubeadm/kubeadm.yaml ] && sudo reboot'
